# EpicEvents_CRM

./: .gitignore  Dockerfile  README.md  alembic.ini  clear_seed_data.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  reset_db.py  seed_data.py
app/auth/: jwt_utils.py  login.py  permissions.py
app/cli/: auth.py  clients.py  collaborateurs.py  contrats.py  evenements.py  main.py
app/core/: config.py
app/crud/: __init__.py  clients.py  collaborateurs.py  contrats.py  evenements.py
app/db/: session.py
app/db/models/: __init__.py  client.py  collaborateur.py  contrat.py  evenement.py
app/services/: client_service.py  collaborateur_service.py  contrat_service.py  departement_service.py  evenement_service.py
app/tests/: test_all.py
app/utils/: command_descriptions.py  config.py  file_utils.py  sentry.py
migrations/: env.py
tests/: test_auth.py  test_permissions.py
tests/test_crud/: test_clients.py  test_collaborateurs.py  test_contrats.py  test_evenements.py
